@@ -111,6 +111,20 @@ Object RootOperation::AsObject() const
     return Object(m);
 }
 
+Object::MapType RootOperation::AsMap() const
+{
+    Object::MapType m = Root::AsObject().AsMap();
+    m["serialno"] = Object(attr_serialno);
+    m["refno"] = Object(attr_refno);
+    m["from"] = Object(attr_from);
+    m["to"] = Object(attr_to);
+    m["seconds"] = Object(attr_seconds);
+    m["future_seconds"] = Object(attr_future_seconds);
+    m["time_string"] = Object(attr_time_string);
+    m["args"] = Object(attr_args);
+    return m;
+}
+
 } } } // namespace Atlas::Objects::Operation
 
 #include "Action.h"
